feat: đụ mẹ hơi cay

--- a/backend/src/main/resources/templates/auth/login.html
+++ b/backend/src/main/resources/templates/auth/login.html
@@ -57,7 +57,7 @@
                     <img class="w-10 h-10 rounded-full border-2 border-black" src="https://i.pravatar.cc/100?u=2" alt="">
                     <img class="w-10 h-10 rounded-full border-2 border-black" src="https://i.pravatar.cc/100?u=3" alt="">
                 </div>
-                <p class="text-xs text-gray-500 font-medium">+10k người vừa mới tham gia vào hôm nay</p>
+                <p class="text-xs text-gray-500 font-medium">+7.4k người vừa mới tham gia vào hôm nay</p>
             </div>
         </div>
 
@@ -73,7 +73,7 @@
                 
                 <div id="loginError" th:if="${param.error}" class="show">
                     <i class="fas fa-exclamation-circle text-red-500 mr-2"></i>
-                    <span class="text-xs font-bold tracking-wide uppercase">Thông tin không chính xác</span>
+                    <span class="text-xs font-bold tracking-wide uppercase">Tài khoản hoặc mật khẩu không đúng</span>
                 </div>
                 <div class="text-center mb-8">
                     <h3 class="text-xl md:text-2xl font-bold tracking-normal uppercase">Đăng Nhập</h3>
@@ -86,7 +86,7 @@
                             <i class="fas fa-user-circle absolute left-4 top-1/2 -translate-y-1/2 text-gray-600"></i>
                             <input type="text" name="email" required
                                    class="w-full pl-12 pr-4 py-4 rounded-2xl text-white outline-none text-sm"
-                                   placeholder="Email hoặc số điện thoại">
+                                   placeholder="Số di động hoặc email">
                         </div>
                     </div>
 
